fix several scrollbar bugs

--- a/src/scrollbar/scrollbar.less
+++ b/src/scrollbar/scrollbar.less
@@ -11,6 +11,10 @@
   -ms-user-select: none;
   user-select: none;
   cursor: default;
+  visibility: hidden;
+  &.show {
+    visibility: visible;
+  }
   .scrollbar-thumb {
     position: absolute;
     right: 0;
